Loom scheduler, cats-interop from monadic-reflection, work on data